# Daniel-s-FTE

./: .env.example  .gitignore  .gitignore-sync  AGENTS.md  BRONZE_TIER_COMPLETION_REPORT.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  WHAT_IS_MISSING.md  completion-report.md  create_test_invoice.py  demo-workflow.sh  ecosystem.config.js  monitor.sh  pyproject.toml  quick-test.sh  run-all-demos.sh  run-mcp-email.sh  run-mcp-social.sh  run-orchestrator.sh  run_bonsai_test.sh  test-system.sh  verify-testing-tools.sh
.claude/skills/: README.md
.specify/memory/: constitution.md
AI_Employee_Vault/: .gitignore  Cloud_Status.md  Company_Handbook.md  Dashboard.md  README.md
AI_Employee_Vault/.obsidian/: appearance.json
AI_Employee_Vault/Done/: EMAIL_gmail_2026-01-14T16-30-00.md  FILE_inbox_2026-01-14T16-35-00.md  FILE_inbox_2026-01-14T19-12-45-384683Z.md  FILE_inbox_2026-01-15T21-15-00.md
AI_Employee_Vault/Inbox/: team-standup-notes.txt
AI_Employee_Vault/Pending_Approval/: AR-2026-01-15-001-Invoice-Request.md
AI_Employee_Vault/Plans/: Action_Items_Tracker.md  Client_Meeting_Presentation_Template.md  DEMO_Email_Draft_Invoice.md  DEMO_Invoice_INV-2026-01-001.md  EXAMPLE_RESULTS_SUMMARY.md  EXECUTION_SUMMARY.md  Email_Draft_Standup_Summary.md  HITL_Workflow_Explanation.md  Meeting_Summary_Engineering_Standup.md  PLAN_EMAIL_gmail_2026-01-14T16-30-00.md  PLAN_Execution_Session_Summary.md  PLAN_FILE_inbox_2026-01-14T16-35-00.md  (+3 more)
docs/: demo-video-script.md  demo_script.md  gold-tier-sdk-research.md
src/: __init__.py  config.py
src/utils/: retry.py  (+3 more)
tests/: conftest.py
(+207 files in other folders)
